--- a/package.json
+++ b/package.json
@@ -8,17 +8,25 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-joi-validation": "^5.0.0",
     "http-errors": "~1.6.3",
+    "ioredis": "^4.22.0",
     "jade": "~1.11.0",
+    "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.5.3",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-strategy": "^1.0.0",
     "sequelize": "^6.5.0",
     "util": "^0.12.3"
   },
