--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-joi-validation": "^5.0.0",
+    "http": "0.0.1-security",
     "http-errors": "~1.6.3",
     "ioredis": "^4.22.0",
     "jade": "~1.11.0",
@@ -29,6 +30,8 @@
     "passport-local": "^1.0.0",
     "passport-strategy": "^1.0.0",
     "sequelize": "^6.5.0",
+    "socket.io": "^3.1.1",
+    "socket.io-client": "^3.1.1",
     "util": "^0.12.3"
   },
   "devDependencies": {
